新模板，隐藏字幕与显示字幕